# bdendro

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mypy.ini  noxfile.py  pyproject.toml  ruff.toml  setup.py
bdendro/: __init__.py  version.py
bdendro/core/: __init__.py  axes.py  renderers.py  transform.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_static/: bizstyle.js
docs/api/: bdendro.dendrogram_renderer.html  bdendro.html  bdendro.set_axes.html  bdendro.subtree_cmap.html
docs_src/: Makefile  conf.py  index.rst
docs_src/_static/: custom.css
docs_src/_templates/autosummary/: function.rst
docs_src/api/: bdendro.rst
docs_src/examples/: generate.py
docs_src/examples/scripts/: basic_usage.py  coloring_a_subtree_consisting_of_a_single_node.py  coloring_subtrees.py  default_color.py  horizontal_layout.py  leaf_labels.py
src/bdendro/: __init__.py  _axes.py  _renderers.py  _transform.py
