[project]
name = "bdendro"
version = "1.1.0"
authors = [{name = "naubuan"}]
description = "Bokeh helpers for visualizing a dendrogram."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "bokeh>=3.1.0",
    "numpy>=2.2.2",
    "scipy>=1.15.2 ; python_full_version < '3.14'",
    "scipy>=1.16.1 ; python_full_version >= '3.14'",
]
classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
repository = "https://github.com/naubuan/bdendro"
documentation = "https://naubuan.github.io/bdendro"

[build-system]
requires = ["setuptools>=77.0.1"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "nox>=2025.2.9",
]
doc = [
    "chromedriver-binary-auto>=0.3.0",
    "selenium>=4.8.0",
    "Sphinx>=7.3.1",
    "sphinxcontrib-fulltoc>=1.2.0",
]
lint = [
    "ruff>=0.8.0",
]
type = [
    "mypy>=1.16.0",
    "scipy-stubs[scipy]>=1.15.2.2 ; python_full_version < '3.14'",
    "scipy-stubs[scipy]>=1.16.1.1 ; python_full_version >= '3.14'",
]
